<resources>
    <string name="app_name">uas_10119270</string>
    <string name="profile">Profile</string>
    <string name="note">Note</string>
    <string name="info">Info</string>
    <string name="add">+</string>
    <string name="save">SAVE</string>
    <string name="judul">Judul</string>
    <string name="catatan">Catatan</string>
    <string name="delete">DELETE</string>
    <string name="info1">Aplikasi yang dibangun untuk memenuhi ujian tengah semester dari mata kuliah Aplikasi Komputasi Bergerak</string>
    <string name="info2">Aplikasi ini memiliki fungsi dasar untuk membuat catatan harian. \n Aplikasi dengan tiga buah menu, yaitu menu profile pembuat, menu untuk membuat catatan, dan menu yang menampilkan informasi aplikasi </string>
    <string name="Nim">10119270</string>
    <string name="Nama">Albanna Rahmadani Sulityo</string>
    <string name="Kelas">IF-7</string>
    <string name="Email">alba.sulistyo@gmail.com</string>
    <string name="logout">logout</string>
    <string name="login">Login</string>
    <string name="reg">User baru? Klik disini</string>
    <string name="register">Register</string>
    <string name="login_text">Sudah punya akun? klik disini</string>
</resources>