<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="208dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/pict" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nim"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nama"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Kelas"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>


</LinearLayout>