<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentNote"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        android:background="@color/splash">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:onClick="saveNote"
            android:backgroundTint="@color/splash"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/judul"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/judulNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/catatan"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/isiNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minLines="3"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/deleteNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:backgroundTint="@color/red"
        android:layout_marginTop="20dp"
        android:onClick="deleteNote"/>
</LinearLayout>